tests/vendor/valid/simple/switch_default_only.c
//expect 1
//tags: simple, switch
int main() {
    int a = 1;
    switch(a) default: return 1;
    return 0;
}